# study-assistant

./: .env.example  .env.production.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_flashcard_last_reviewed.py  0003_add_document_tags.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: __init__.py
backend/app/api/auth/: router.py  schemas.py  service.py
backend/app/api/documents/: router.py  schemas.py  service.py
backend/app/api/workspace/: router.py  schemas.py
backend/app/core/: errors.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/services/: chat.py  chunking.py  embedding.py  flashcard.py  init_bucket.py  llm.py  pdf_extraction.py  retrieval.py  storage.py  summary.py  usage.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py  test_chat.py  test_llm.py  test_summary.py
backend/tests/integration/: conftest.py  test_auth_api.py  test_auth_profile_api.py  test_document_management_api.py  test_documents_api.py  test_flashcard_api.py  test_health.py  test_workspace_api.py
backend/tests/unit/: test_auth_profile.py  test_auth_service.py  test_chunking.py  test_dependencies.py  test_document_management.py  test_documents_service.py  test_embedding.py  test_errors.py  test_flashcard_service.py  test_ingestion.py  test_pdf_extraction.py  test_retrieval.py  test_security.py  test_storage.py  test_usage.py
frontend/: Dockerfile  (+2 more)
(+64 files in other folders)
